--- a/index.html
+++ b/index.html
@@ -381,26 +381,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-1-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-1@2x-min.jpg 2x
+                    ./images/portfolio-desk-1-min.jpg    1x,
+                    ./images/portfolio-desk-1@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-1-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-1@2x-min.jpg 2x
+                    ./images/portfolio-tab-1-min.jpg    1x,
+                    ./images/portfolio-tab-1@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-1-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-1@2x-min.jpg 2x
+                    ./images/portfolio-mob-1-min.jpg    1x,
+                    ./images/portfolio-mob-1@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-1-min.jpg"
+                  src="./images/portfolio-desk-1-min.jpg"
                   width="360"
                   alt="app"
                 />
@@ -422,26 +422,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-2-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-2@2x-min.jpg 2x
+                    ./images/portfolio-desk-2-min.jpg    1x,
+                    ./images/portfolio-desk-2@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-2-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-2@2x-min.jpg 2x
+                    ./images/portfolio-tab-2-min.jpg    1x,
+                    ./images/portfolio-tab-2@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-2-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-2@2x-min.jpg 2x
+                    ./images/portfolio-mob-2-min.jpg    1x,
+                    ./images/portfolio-mob-2@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-2-min.jpg"
+                  src="./images/portfolio-desk-2-min.jpg"
                   width="360"
                   alt="marketing"
                 />
@@ -463,26 +463,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-3-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-3@2x-min.jpg 2x
+                    ./images/portfolio-desk-3-min.jpg    1x,
+                    ./images/portfolio-desk-3@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-3-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-3@2x-min.jpg 2x
+                    ./images/portfolio-tab-3-min.jpg    1x,
+                    ./images/portfolio-tab-3@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-3-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-3@2x-min.jpg 2x
+                    ./images/portfolio-mob-3-min.jpg    1x,
+                    ./images/portfolio-mob-3@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-3-min.jpg"
+                  src="./images/portfolio-desk-3-min.jpg"
                   width="360"
                   alt="meditation-app"
                 />
@@ -504,15 +504,15 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-4-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-4@2x-min.jpg 2x
+                    ./images/portfolio-desk-4-min.jpg    1x,
+                    ./images/portfolio-desk-4@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-4-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-4@2x-min.jpg 2x
+                    ./images/portfolio-tab-4-min.jpg    1x,
+                    ./images/portfolio-tab-4@2x-min.jpg 2x
                   "
                 />
                 <source
@@ -523,7 +523,7 @@
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-4-min.jpg"
+                  src="./images/portfolio-desk-4-min.jpg"
                   width="360"
                   alt="taxi-service"
                 />
@@ -545,26 +545,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-5-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-5@2x-min.jpg 2x
+                    ./images/portfolio-desk-5-min.jpg    1x,
+                    ./images/portfolio-desk-5@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-5-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-5@2x-min.jpg 2x
+                    ./images/portfolio-tab-5-min.jpg    1x,
+                    ./images/portfolio-tab-5@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-5-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-5@2x-min.jpg 2x
+                    ./images/portfolio-mob-5-min.jpg    1x,
+                    ./images/portfolio-mob-5@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-5-min.jpg"
+                  src="./images/portfolio-desk-5-min.jpg"
                   width="360"
                   alt="screen illustrations"
                 />
@@ -586,26 +586,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-6-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-6@2x-min.jpg 2x
+                    ./images/portfolio-desk-6-min.jpg    1x,
+                    ./images/portfolio-desk-6@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-6-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-6@2x-min.jpg 2x
+                    ./images/portfolio-tab-6-min.jpg    1x,
+                    ./images/portfolio-tab-6@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-6-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-6@2x-min.jpg 2x
+                    ./images/portfolio-mob-6-min.jpg    1x,
+                    ./images/portfolio-mob-6@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-6-min.jpg"
+                  src="./images/portfolio-desk-6-min.jpg"
                   width="360"
                   alt="online courses"
                 />
