--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-4-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-4@2x-min.jpg 2x
+                    ./images/portfolio-mob-4-min.jpg    1x,
+                    ./images/portfolio-mob-4@2x-min.jpg 2x
                   "
                 />
                 <img
