--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
           <a class="logo" href="./index.html"
             >Web<span class="studio">Studio</span></a
           >
+          <ul class="nav-menu">
+            <li><a class="studio-header" href="./index.html">Studio</a></li>
+            <li><a class="nav" href="">Portfolio</a></li>
+            <li><a class="nav" href="">Contacts</a></li>
+          </ul>
         </nav>
-        <ul class="nav-menu">
-          <li><a class="studio-header" href="./index.html">Studio</a></li>
-          <li><a class="nav" href="">Portfolio</a></li>
-          <li><a class="nav" href="">Contacts</a></li>
-        </ul>
-
         <address class="page-contacts">
           <ul class="contacts">
             <li class="contact-mail">
@@ -59,15 +58,17 @@
       <div class="mobile-menu">
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close">
-            <svg class="cross" width="8" height="8">
+            <svg class="cross-mob" width="8" height="8">
               <use href="./images/icons-modal.svg#icon-close-black-18dp-2-1" />
             </svg>
           </button>
           <nav>
             <ul class="mobile-nav-menu">
-              <li><a class="studio-header" href="./index.html">Studio</a></li>
-              <li><a class="nav" href="">Portfolio</a></li>
-              <li><a class="nav" href="">Contacts</a></li>
+              <li>
+                <a class="studio-header-mob" href="./index.html">Studio</a>
+              </li>
+              <li><a class="nav-mob" href="">Portfolio</a></li>
+              <li><a class="nav-mob" href="">Contacts</a></li>
             </ul>
           </nav>
           <address>
@@ -381,26 +382,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio-desk-1-min.jpg    1x,
-                    ./images/portfolio-desk-1@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-desk-1-min.jpg    1x,
+                    ./images/portfolio/portfolio-desk-1@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio-tab-1-min.jpg    1x,
-                    ./images/portfolio-tab-1@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-tab-1-min.jpg    1x,
+                    ./images/portfolio/portfolio-tab-1@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio-mob-1-min.jpg    1x,
-                    ./images/portfolio-mob-1@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-mob-1-min.jpg    1x,
+                    ./images/portfolio/portfolio-mob-1@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio-desk-1-min.jpg"
+                  src="./images/portfolio/portfolio-desk-1-min.jpg"
                   width="360"
                   alt="app"
                 />
@@ -422,26 +423,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio-desk-2-min.jpg    1x,
-                    ./images/portfolio-desk-2@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-desk-2-min.jpg    1x,
+                    ./images/portfolio/portfolio-desk-2@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio-tab-2-min.jpg    1x,
-                    ./images/portfolio-tab-2@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-tab-2-min.jpg    1x,
+                    ./images/portfolio/portfolio-tab-2@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio-mob-2-min.jpg    1x,
-                    ./images/portfolio-mob-2@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-mob-2-min.jpg    1x,
+                    ./images/portfolio/portfolio-mob-2@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio-desk-2-min.jpg"
+                  src="./images/portfolio/portfolio-desk-2-min.jpg"
                   width="360"
                   alt="marketing"
                 />
@@ -463,26 +464,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio-desk-3-min.jpg    1x,
-                    ./images/portfolio-desk-3@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-desk-3-min.jpg    1x,
+                    ./images/portfolio/portfolio-desk-3@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio-tab-3-min.jpg    1x,
-                    ./images/portfolio-tab-3@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-tab-3-min.jpg    1x,
+                    ./images/portfolio/portfolio-tab-3@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio-mob-3-min.jpg    1x,
-                    ./images/portfolio-mob-3@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-mob-3-min.jpg    1x,
+                    ./images/portfolio/portfolio-mob-3@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio-desk-3-min.jpg"
+                  src="./images/portfolio/portfolio-desk-3-min.jpg"
                   width="360"
                   alt="meditation-app"
                 />
@@ -504,26 +505,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio-desk-4-min.jpg    1x,
-                    ./images/portfolio-desk-4@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-desk-4-min.jpg    1x,
+                    ./images/portfolio/portfolio-desk-4@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio-tab-4-min.jpg    1x,
-                    ./images/portfolio-tab-4@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-tab-4-min.jpg    1x,
+                    ./images/portfolio/portfolio-tab-4@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio-mob-4-min.jpg    1x,
-                    ./images/portfolio-mob-4@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-mob-4-min.jpg    1x,
+                    ./images/portfolio/portfolio-mob-4@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio-desk-4-min.jpg"
+                  src="./images/portfolio/portfolio-desk-4-min.jpg"
                   width="360"
                   alt="taxi-service"
                 />
@@ -545,26 +546,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio-desk-5-min.jpg    1x,
-                    ./images/portfolio-desk-5@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-desk-5-min.jpg    1x,
+                    ./images/portfolio/portfolio-desk-5@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio-tab-5-min.jpg    1x,
-                    ./images/portfolio-tab-5@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-tab-5-min.jpg    1x,
+                    ./images/portfolio/portfolio-tab-5@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio-mob-5-min.jpg    1x,
-                    ./images/portfolio-mob-5@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-mob-5-min.jpg    1x,
+                    ./images/portfolio/portfolio-mob-5@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio-desk-5-min.jpg"
+                  src="./images/portfolio/portfolio-desk-5-min.jpg"
                   width="360"
                   alt="screen illustrations"
                 />
@@ -586,26 +587,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio-desk-6-min.jpg    1x,
-                    ./images/portfolio-desk-6@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-desk-6-min.jpg    1x,
+                    ./images/portfolio/portfolio-desk-6@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio-tab-6-min.jpg    1x,
-                    ./images/portfolio-tab-6@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-tab-6-min.jpg    1x,
+                    ./images/portfolio/portfolio-tab-6@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio-mob-6-min.jpg    1x,
-                    ./images/portfolio-mob-6@2x-min.jpg 2x
+                    ./images/portfolio/portfolio-mob-6-min.jpg    1x,
+                    ./images/portfolio/portfolio-mob-6@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio-desk-6-min.jpg"
+                  src="./images/portfolio/portfolio-desk-6-min.jpg"
                   width="360"
                   alt="online courses"
                 />
@@ -671,8 +672,7 @@
             </li>
           </ul>
         </div>
-
-        <div class="form-footer">
+        <div class="div-form-footer">
           <p class="subscribe">Subscribe</p>
           <form class="form-footer">
             <label class="label-footer">
