--- a/index.html
+++ b/index.html
@@ -382,26 +382,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-1-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-1@2x-min.jpg 2x
+                    ./images/portfolio-desk-1-min.jpg    1x,
+                    ./images/portfolio-desk-1@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-1-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-1@2x-min.jpg 2x
+                    ./images/portfolio-tab-1-min.jpg    1x,
+                    ./images/portfolio-tab-1@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-1-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-1@2x-min.jpg 2x
+                    ./images/portfolio-mob-1-min.jpg    1x,
+                    ./images/portfolio-mob-1@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-1-min.jpg"
+                  src="./images/portfolio-desk-1-min.jpg"
                   width="360"
                   alt="app"
                 />
@@ -423,26 +423,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-2-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-2@2x-min.jpg 2x
+                    ./images/portfolio-desk-2-min.jpg    1x,
+                    ./images/portfolio-desk-2@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-2-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-2@2x-min.jpg 2x
+                    ./images/portfolio-tab-2-min.jpg    1x,
+                    ./images/portfolio-tab-2@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-2-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-2@2x-min.jpg 2x
+                    ./images/portfolio-mob-2-min.jpg    1x,
+                    ./images/portfolio-mob-2@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-2-min.jpg"
+                  src="./images/portfolio-desk-2-min.jpg"
                   width="360"
                   alt="marketing"
                 />
@@ -464,26 +464,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-3-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-3@2x-min.jpg 2x
+                    ./images/portfolio-desk-3-min.jpg    1x,
+                    ./images/portfolio-desk-3@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-3-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-3@2x-min.jpg 2x
+                    ./images/portfolio-tab-3-min.jpg    1x,
+                    ./images/portfolio-tab-3@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-3-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-3@2x-min.jpg 2x
+                    ./images/portfolio-mob-3-min.jpg    1x,
+                    ./images/portfolio-mob-3@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-3-min.jpg"
+                  src="./images/portfolio-desk-3-min.jpg"
                   width="360"
                   alt="meditation-app"
                 />
@@ -505,8 +505,8 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-4-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-4@2x-min.jpg 2x
+                    ./images/portfolio-desk-4-min.jpg    1x,
+                    ./images/portfolio-desk-4@2x-min.jpg 2x
                   "
                 />
                 <source
@@ -519,12 +519,12 @@
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-4-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-4@2x-min.jpg 2x
+                    ./images/portfolio-mob-4-min.jpg    1x,
+                    ./images/portfolio-mob-4@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-4-min.jpg"
+                  src="./images/portfolio-desk-4-min.jpg"
                   width="360"
                   alt="taxi-service"
                 />
@@ -546,26 +546,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-5-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-5@2x-min.jpg 2x
+                    ./images/portfolio-desk-5-min.jpg    1x,
+                    ./images/portfolio-desk-5@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-5-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-5@2x-min.jpg 2x
+                    ./images/portfolio-tab-5-min.jpg    1x,
+                    ./images/portfolio-tab-5@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-5-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-5@2x-min.jpg 2x
+                    ./images/portfolio-mob-5-min.jpg    1x,
+                    ./images/portfolio-mob-5@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-5-min.jpg"
+                  src="./images/portfolio-desk-5-min.jpg"
                   width="360"
                   alt="screen illustrations"
                 />
@@ -587,26 +587,26 @@
                 <source
                   media="(min-width: 1158px)"
                   srcset="
-                    ./images/portfolio/portfolio-desk-6-min.jpg    1x,
-                    ./images/portfolio/portfolio-desk-6@2x-min.jpg 2x
+                    ./images/portfolio-desk-6-min.jpg    1x,
+                    ./images/portfolio-desk-6@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-6-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-6@2x-min.jpg 2x
+                    ./images/portfolio-tab-6-min.jpg    1x,
+                    ./images/portfolio-tab-6@2x-min.jpg 2x
                   "
                 />
                 <source
                   media="(max-width: 767px)"
                   srcset="
-                    ./images/portfolio/portfolio-mob-6-min.jpg    1x,
-                    ./images/portfolio/portfolio-mob-6@2x-min.jpg 2x
+                    ./images/portfolio-mob-6-min.jpg    1x,
+                    ./images/portfolio-mob-6@2x-min.jpg 2x
                   "
                 />
                 <img
-                  src="./images/portfolio/portfolio-desk-6-min.jpg"
+                  src="./images/portfolio-desk-6-min.jpg"
                   width="360"
                   alt="online courses"
                 />
