--- a/index.html
+++ b/index.html
@@ -512,8 +512,8 @@
                 <source
                   media="(min-width: 768px)"
                   srcset="
-                    ./images/portfolio/portfolio-tab-4-min.jpg    1x,
-                    ./images/portfolio/portfolio-tab-4@2x-min.jpg 2x
+                    ./images/portfolio-tab-4-min.jpg    1x,
+                    ./images/portfolio-tab-4@2x-min.jpg 2x
                   "
                 />
                 <source
