--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <use href="./images/icons-modal.svg#icon-close-black-18dp-2-1" />
             </svg>
           </button>
-          <nav>
+          <nav class="mob-nav">
             <ul class="mobile-nav-menu">
               <li>
                 <a class="studio-header-mob" href="./index.html">Studio</a>
